[gd_scene load_steps=2 format=3 uid="uid://bmtb3thxlc0ms"]

[ext_resource type="Script" path="res://scripts/chat/chat_interface.gd" id="1_1pqug"]

[node name="ChatInterface" type="Control"]
layout_mode = 3
anchor_top = 0.7
anchor_right = 0.3
anchor_bottom = 1.0
script = ExtResource("1_1pqug")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="Log" type="Control" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/VBoxContainer/Log"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.85098, 0.85098, 0.85098, 0.501961)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/Log"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="ChatText" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer/Log/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
scroll_following = true

[node name="Spacing" type="Control" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Type here"

[connection signal="text_submitted" from="ColorRect/MarginContainer/VBoxContainer/ChatInput" to="." method="_on_input_text_submitted"]
